--- a/Views/index.html
+++ b/Views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="./public/Logo.png" />
     <meta name="theme-color" content="#3d3a4e" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
